[tool.poetry]
name = "py-multitasking"
version = "0.1.0"
description = "Simplify multi tasking with process or thread pool executor."
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
